@@ -1,5 +1,6 @@
 0.07
  - Add Map::Tube::Vienna to SEE ALSO section in doc.
+ - Add get_lines() method to doc.
  - Improve EXAMPLE3 section in doc.
 
 0.06 2014-12-22T01:16:24+01:00
